# clintriage-ai

./: .gitignore  Dockerfile  README.md  config.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt
app/: __init__.py  env.py  models.py  router.py
app/data/: patient_cases.json
app/graders/: __init__.py  llm_grader.py  programmatic_grader.py
app/tasks/: __init__.py  task1_binary.py  task2_priority.py  task3_multi.py  task4_resource.py  task5_edge.py
server/: __init__.py  app.py
static/: app.js  index.html  style.css
tests/: test_all.py
