[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clintriage-ai"
version = "1.0.0"
description = "Indian ER triage reinforcement learning environment for OpenEnv hackathon."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.6.4",
    "openai>=1.20.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "jinja2>=3.1.3",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:app"
